--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
   "author": "llessa <lrlessa@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.9.10",
     "gulp": "^3.9.0",
-    "gulp-connect": "^2.2.0",
     "gulp-consolidate": "^0.1.2",
     "gulp-iconfont": "^5.0.0",
-    "gulp-jade": "^1.1.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-mustache": "^1.1.2",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.1.0",
+    "imagemin-pngquant": "^4.2.0",
     "jeet": "^6.1.2",
-    "lodash": "^3.10.1"
+    "lodash": "^3.10.1",
+    "rupture": "^0.6.1"
   }
 }
